<resources>
    <string name="app_name">B2CGoodsPrice</string>
    <string name="menu_item">列表</string>
    <string name="menu_add">添加</string>
    <string name="menu_future">留空</string>
    <string name="menu_manage">管理</string>
    <string name="menu_dialog_waiting">载入中，请稍后</string>

    <!--================= Goods Page =================-->
    <!-- Goods List Main Page -->
    <string name="list_online">网店</string>
    <string name="list_cheapest_online">网店价</string>
    <string name="list_offline">实体店</string>
    <string name="list_cheapest_offline">实体店</string>
    <!-- Goods add new Page -->
    <string name="add">添加</string>
    <string name="total_count">共有%1$d个项目</string>
    <string name="id">ID</string>
    <string name="name">名称</string>
    <string name="type">类别</string>
    <string name="brand">厂家</string>
    <string name="standard">规格</string>
    <string name="price">价格</string>
    <string name="brand_count">厂家数</string>
    <string name="goods_count">物品数</string>

    <!--================= Manage Page =================-->
    <!-- Manage Main Page -->
    <string name="manage_goods_manage">物品管理</string>
    <string name="manage_right_arrow"><![CDATA[>]]></string>
    <!-- Manage Goods Page -->
    <string name="manage_goods_type_manage">物品类别管理</string>
    <string name="manage_goods_brand_manage">物品商家管理</string>
    <string name="manage_init_database">初始化</string>
</resources>
