<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexsophia.b2cgoodsprice.features.main.ui.MainActivity">

    <!-- Goods type manage -->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_manage_goods_type"
        style="@style/ManageItemStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_goods_type_manage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/manage_right_arrow"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <!-- Goods brand manage -->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rl_manage_goods_brand"
        style="@style/ManageItemStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_goods_brand_manage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/manage_right_arrow"/>
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
