<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:round="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:orientation="horizontal"
    tools:showIn="@layout/main_content_activity">

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/Main_tab_bg_ll_style">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/tab1_main"
            style="@style/Main_tab_ll_style">

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_img_rl_style">

                <ImageView
                    android:id="@+id/tab1_iv_main"
                    style="@style/Main_tab_img_style"
                    android:src="@mipmap/ic_launcher"/>

                <com.alexsophia.b2cgoodsprice.share.RoundedImageView
                    android:id="@+id/iv_tab1_unread_mark"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:src="@color/red"
                    android:visibility="gone"
                    round:riv_oval="true"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_tv_rl_style">

                <TextView
                    android:id="@+id/tab1_tv_main"
                    style="@style/Main_tab_tv_style"
                    android:text="@string/menu_item"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/Main_tab_bg_ll_style">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/tab2_main"
            style="@style/Main_tab_ll_style">

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_img_rl_style">

                <ImageView
                    android:id="@+id/tab2_iv_main"
                    style="@style/Main_tab_img_style"
                    android:src="@mipmap/ic_launcher"/>

                <com.alexsophia.b2cgoodsprice.share.RoundedImageView
                    android:id="@+id/iv_tab2_unread_mark"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:src="@color/red"
                    android:visibility="gone"
                    round:riv_oval="true"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_tv_rl_style">

                <TextView
                    android:id="@+id/tab2_tv_main"
                    style="@style/Main_tab_tv_style"
                    android:text="@string/menu_add"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/Main_tab_bg_ll_style">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/tab3_main"
            style="@style/Main_tab_ll_style">

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_img_rl_style">

                <ImageView
                    android:id="@+id/tab3_iv_main"
                    style="@style/Main_tab_img_style"
                    android:src="@mipmap/ic_launcher"/>

                <com.alexsophia.b2cgoodsprice.share.RoundedImageView
                    android:id="@+id/iv_tab3_unread_mark"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:src="@color/red"
                    android:visibility="gone"
                    round:riv_oval="true"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_tv_rl_style">

                <TextView
                    android:id="@+id/tab3_tv_main"
                    style="@style/Main_tab_tv_style"
                    android:text="@string/menu_future"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/Main_tab_bg_ll_style">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/tab4_main"
            style="@style/Main_tab_ll_style">

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_img_rl_style">

                <ImageView
                    android:id="@+id/tab4_iv_main"
                    style="@style/Main_tab_img_style"
                    android:src="@mipmap/ic_launcher"/>

                <com.alexsophia.b2cgoodsprice.share.RoundedImageView
                    android:id="@+id/iv_tab4_unread_mark"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="14dp"
                    android:src="@color/red"
                    android:visibility="gone"
                    round:riv_oval="true"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                style="@style/Main_tab_tv_rl_style">

                <TextView
                    android:id="@+id/tab4_tv_main"
                    style="@style/Main_tab_tv_style"
                    android:text="@string/menu_manage"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>